# acsm-spark

./: .gitignore  Makefile  README.MD  TODO  go.mod  go.sum
cmd/: main.go
internal/manager/: session.go
internal/manager/kubernette/: kubernette.go
internal/manager/process/: process.go
internal/pb/: manager.pb.go  manager.proto  manager_grpc.pb.go  session.go
internal/proxy/: handler.go  proxy.go
python/: pyproject.toml
python/src/acsm_spark/: __init__.py  manager_pb2.py  manager_pb2.pyi  manager_pb2_grpc.py
python/tests/: test_client.py
tests/: spark_connect.py  spark_connect_server.sh
