[build-system]
# requires = ["hatchling"]
# build-backend = "hatchling.build"
requires = ["setuptools>=65", "wheel", "grpcio-tools>=1.76.0"]
build-backend = "setuptools.build_meta"

[project]
name = "acsm-spark-py"
version = "0.1.0"
description = "Client library for ACSM Spark API to connect to remote Spark Connect clusters, on demand"
authors = [
    { name = "Thanh Tran", email = "thanhmt0612@gmail.com" }
]
requires-python = ">=3.10.0"

dependencies = [
    "pyspark[connect] >= 4.0.1",
]
